# findPatternInFiles3

./: README.md  findPatternInFiles3.cabal  stack.yaml
src/: AbsoluteFilePathToRelativeFilePath.hs  GetAhaHTML.hs  GetGrepResults.hs
src-exe/: Main.hs
